Duplicating an action with python crashes Blender #91393

Closed
opened 2021-09-14 07:52:43 +02:00 by Beorn Leonard · 9 comments

System Information
Operating system: Linux Mint 19.3 & Windows 10

Blender Version
Broken: 2.93.4
Broken: 2.92.0
Working: 2.91.2
Working: 2.83.17 (fb67495c7feb)

Caused by c0bd240ad0

Short Description of the error
When running bpy.ops.action.new() in a script, Blender crashes with a segmentation fault.

Exact steps for others to reproduce the error

  • Open .blend file.
  • Run the script. Blender will crash.

Test File:
new_action_python_bug.blend

**System Information** Operating system: Linux Mint 19.3 & Windows 10 **Blender Version** Broken: 2.93.4 Broken: 2.92.0 Working: 2.91.2 Working: 2.83.17 (`fb67495c7feb`) Caused by c0bd240ad0 **Short Description of the error** When running bpy.ops.action.new() in a script, Blender crashes with a segmentation fault. **Exact steps for others to reproduce the error** - Open .blend file. - Run the script. Blender will crash. Test File: [new_action_python_bug.blend](https://archive.blender.org/developer/F10411112/new_action_python_bug.blend)
Author

Added subscriber: @BeornLeonard

Added subscriber: @BeornLeonard
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscribers: @mont29, @lichtwerk

Added subscribers: @mont29, @lichtwerk
Member
@mont29: mind checking? `ptr.owner_id` is NULL here https://developer.blender.org/diffusion/B/browse/master/source/blender/editors/space_action/action_data.c$243

Added subscriber: @ChandrapalSd

Added subscriber: @ChandrapalSd

Added subscriber: @Siddarth-Calidas

Added subscriber: @Siddarth-Calidas

This issue was referenced by 330a04d7c7

This issue was referenced by 330a04d7c7928c213c121bedcab9dd77a16d106e

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2021-09-28 17:46:22 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#91393
No description provided.